Fix layout issue on landing page.

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -17,7 +17,7 @@ body {
   //line-height: 1.8125rem;
   //line-height: 150%;
   color: $bp-brown;
-  background-color: $bp-white !important;
+  background-color: #FFFFFF !important;
 
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
