--- a/src/components/OneStop.scss
+++ b/src/components/OneStop.scss
@@ -1,6 +1,8 @@
 @import "../assets/styles/variables";
 
 .section-one-stop {
+  padding: 16px;
+
   h3 {
     margin-bottom: 20px;
   }
@@ -13,5 +15,14 @@
     display: block;
     font-size: 0.625rem;
     margin-top: 15px;
+  }
+
+  .one-stop-item {
+    max-width: 300px;
+
+    @media (max-width: 600px) {
+      margin: 0 auto;
+      text-align: center;
+    }
   }
 }
