--- a/src/components/Technology.scss
+++ b/src/components/Technology.scss
@@ -5,5 +5,6 @@ section.technology {
     background: url(../assets/images/technology-bg.png) no-repeat left center;
     min-height: 600px;
     background-size: contain;
+    padding: 16px;
   }
 }
